--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -24,7 +24,8 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-
+      - name: MacPorts
+        uses: keepitsimpletech/actions/setup-macports@setup-macports/releases/v1
       - name: Set up dependencies
         run : ./set_up_build_dependency.sh
       - name: Fetch wine code
