--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           cd /tmp
           wget https://github.com/macports/macports-base/releases/download/v2.6.4/MacPorts-2.6.4-10.15-Catalina.pkg
-          /usr/sbin/installer -pkg MacPorts-2.6.4-10.15-Catalina.pkg -target /
+          sudo /usr/sbin/installer -pkg MacPorts-2.6.4-10.15-Catalina.pkg -target /
           port version
           
       - name: Set up dependencies
