--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -29,6 +29,8 @@ jobs:
           cd /tmp
           wget https://github.com/macports/macports-base/releases/download/v2.6.4/MacPorts-2.6.4-10.15-Catalina.pkg
           sudo /usr/sbin/installer -pkg MacPorts-2.6.4-10.15-Catalina.pkg -target /
+          ls /opt/local/bin
+          export PATH=$PATH:/opt/local/bin
           port version
           
       - name: Set up dependencies
